Refactor , Folder cleanUp