@@ -1,6 +1,7 @@
 package lambdas.ch04;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 import java.util.function.Supplier;
@@ -8,7 +9,7 @@ import java.util.function.Supplier;
 //Shows how to use Supplier.
 public class Coupons {
 
-	private static List<String> coupons = List.of("10$", "100$", "200$", "500$", "1000$", "2000$");
+	private static List<String> coupons = Arrays.asList("10$", "100$", "200$", "500$", "1000$", "2000$");
 
 	public static List<String> getAvailableCoupons(int numberOfCoupons, Supplier<String> couponPattern) {
 
